[gd_scene load_steps=40 format=3 uid="uid://clwc00u5nf07i"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_r7apy"]
[ext_resource type="PackedScene" uid="uid://6ifugba74vdf" path="res://Scenes/health_component.tscn" id="2_fujjd"]
[ext_resource type="Script" path="res://Scripts/Player/CharacterBody.gd" id="2_tppx4"]
[ext_resource type="Texture2D" uid="uid://v6qtt6wopfk8" path="res://Sprites/knight.png" id="3_0r1gr"]
[ext_resource type="FontFile" uid="uid://cix8hsofah8qh" path="res://fonts/PixelOperator8.ttf" id="3_lmte7"]
[ext_resource type="Script" path="res://Scripts/AttackComponent.gd" id="3_tjf86"]
[ext_resource type="Shader" path="res://Shaders/player.gdshader" id="3_ugwd1"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="4_p2o8b"]
[ext_resource type="Script" path="res://Scripts/Player/AttackReceivedBehavior.gd" id="5_edlfm"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="5_ocjbv"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="6_vqpoc"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/StateMachine.gd" id="8_cuvj2"]
[ext_resource type="Texture2D" uid="uid://cmekbpe43vb2g" path="res://Sprites/AimPointer.png" id="8_lbxy7"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/IdleState.gd" id="9_x6a1r"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/MoveState.gd" id="10_en7cv"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/AttackState.gd" id="11_4bjw8"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/JumpState.gd" id="12_va0vs"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/WallJumpState.gd" id="13_m8uta"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/RangeAttackState.gd" id="14_0xvrc"]
[ext_resource type="Texture2D" uid="uid://mjmv1nme0ui0" path="res://Sprites/shadow-tex.png" id="14_b42eh"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/FallState.gd" id="14_mur8y"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/SlideState.gd" id="15_3vpdl"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/AimState.gd" id="15_bqqo1"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/PushbackState.gd" id="16_50dke"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/RollState.gd" id="17_g83y0"]

[sub_resource type="Resource" id="Resource_1tkjr"]
script = ExtResource("5_ocjbv")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gtgo0"]
radius = 4.80762
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mrcjy"]
radius = 6.0
height = 18.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d1up4"]
shader = ExtResource("3_ugwd1")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = null

[sub_resource type="Animation" id="Animation_mti88"]
resource_name = "Aim"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_v1ttb"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/SwordHitArea/SwordHitCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_j3j7a"]
resource_name = "Fall"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_wn06d"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
step = 0.101
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1, 0, 1, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/SwordHitArea/SwordHitCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_d6g6m"]
resource_name = "Jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_itmv7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/SwordHitArea/SwordHitCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_34pdy"]
resource_name = "Run"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 0.965936, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_4f2ef"]
resource_name = "Shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01fse"]
_data = {
"Aim": SubResource("Animation_mti88"),
"Attack": SubResource("Animation_v1ttb"),
"Fall": SubResource("Animation_j3j7a"),
"Idle": SubResource("Animation_wn06d"),
"Jump": SubResource("Animation_d6g6m"),
"RESET": SubResource("Animation_itmv7"),
"Run": SubResource("Animation_34pdy"),
"Shoot": SubResource("Animation_4f2ef")
}

[sub_resource type="LabelSettings" id="LabelSettings_7i2pm"]
font = ExtResource("3_lmte7")

[node name="Player" type="Node2D" node_paths=PackedStringArray("health")]
z_index = 5
texture_filter = 1
script = ExtResource("1_r7apy")
health = NodePath("HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_fujjd")]
show_bar = false

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("3_tjf86")

[node name="Cameras" type="Node2D" parent="."]

[node name="MainPCamera" type="Node2D" parent="Cameras" node_paths=PackedStringArray("follow_target")]
position = Vector2(165, 110)
script = ExtResource("4_p2o8b")
follow_mode = 2
follow_target = NodePath("../../CharacterBody2D")
zoom = Vector2(2, 2)
snap_to_pixel = true
tween_resource = SubResource("Resource_1tkjr")
follow_damping = true
draw_limits = true
limit_left = 5
limit_top = -10

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(165, 110)
zoom = Vector2(2, 2)
limit_left = 5
limit_top = -10
editor_draw_limits = true

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("6_vqpoc")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
z_index = 5
collision_mask = 13
floor_constant_speed = true
script = ExtResource("2_tppx4")

[node name="CollisionToWorld" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 4)
scale = Vector2(1.04002, 0.68)
shape = SubResource("CapsuleShape2D_gtgo0")

[node name="CollisionDamage" type="Area2D" parent="CharacterBody2D"]
collision_layer = 16
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/CollisionDamage"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_mrcjy")

[node name="Raycasts" type="Node2D" parent="CharacterBody2D"]

[node name="Floor" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
unique_name_in_owner = true
position = Vector2(0, 12.6)
scale = Vector2(1.82, 1.795)
target_position = Vector2(0, 5.7)
collision_mask = 8
hit_from_inside = true

[node name="WallRight" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
unique_name_in_owner = true
position = Vector2(6, 9)
scale = Vector2(1.3, 0.994)
target_position = Vector2(4, 0)
collision_mask = 8
hit_from_inside = true

[node name="WallRight2" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
unique_name_in_owner = true
position = Vector2(5, 11)
scale = Vector2(1.3, 0.994)
target_position = Vector2(4.61539, 5.03018)
collision_mask = 8
hit_from_inside = true

[node name="WallLeft" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
unique_name_in_owner = true
position = Vector2(-6, 9)
scale = Vector2(1.3, 0.929)
target_position = Vector2(-4, 0)
collision_mask = 8
hit_from_inside = true

[node name="WallLeft2" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
unique_name_in_owner = true
position = Vector2(-6, 11)
scale = Vector2(1.3, 0.929)
target_position = Vector2(-4.61539, 5.38214)
collision_mask = 8
hit_from_inside = true

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
material = SubResource("ShaderMaterial_d1up4")
texture = ExtResource("3_0r1gr")
hframes = 4
vframes = 8

[node name="SwordHitArea" type="Area2D" parent="CharacterBody2D/Sprite2D"]
collision_layer = 32
collision_mask = 2

[node name="SwordHitCollision" type="CollisionPolygon2D" parent="CharacterBody2D/Sprite2D/SwordHitArea"]
visible = false
polygon = PackedVector2Array(3, -1, -5, -10, 15, -11, 35, -4, 33, 8, 12, 17, -15, 10, 3, 5)

[node name="AttackReceivedEffects" type="Node" parent="CharacterBody2D/Sprite2D"]
script = ExtResource("5_edlfm")

[node name="InitialTimer" type="Timer" parent="CharacterBody2D/Sprite2D/AttackReceivedEffects"]

[node name="PivotAim" type="Node2D" parent="CharacterBody2D/Sprite2D"]
unique_name_in_owner = true
rotation = 1.5708

[node name="AimPointer" type="Sprite2D" parent="CharacterBody2D/Sprite2D/PivotAim"]
unique_name_in_owner = true
position = Vector2(0, -30)
texture = ExtResource("8_lbxy7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_01fse")
}
autoplay = "Idle"

[node name="RayCasts" type="Node" parent="CharacterBody2D"]

[node name="LabelAction" type="Label" parent="CharacterBody2D"]
offset_left = -10.0
offset_top = -12.0
offset_right = 68.0
offset_bottom = 7.0
scale = Vector2(0.269293, 0.320322)
label_settings = SubResource("LabelSettings_7i2pm")

[node name="PointLight2D" type="PointLight2D" parent="CharacterBody2D"]
energy = 2.4
texture = ExtResource("14_b42eh")
texture_scale = 2.72
height = 37.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state", "pushback_state", "label_action")]
unique_name_in_owner = true
script = ExtResource("8_cuvj2")
starting_state = NodePath("IdleState")
pushback_state = NodePath("PushbackState")
label_action = NodePath("../CharacterBody2D/LabelAction")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "roll_state", "attack_state", "aim_state")]
script = ExtResource("9_x6a1r")
fall_state = NodePath("../FallState")
jump_state = NodePath("../JumpState")
move_state = NodePath("../MoveState")
roll_state = NodePath("../RollState")
attack_state = NodePath("../AttackState")
aim_state = NodePath("../AimState")
animation_name = "Idle"

[node name="MoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "roll_state", "attack_state", "aim_state")]
script = ExtResource("10_en7cv")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
jump_state = NodePath("../JumpState")
roll_state = NodePath("../RollState")
attack_state = NodePath("../AttackState")
aim_state = NodePath("../AimState")
animation_name = "Run"
move_speed = 100.0

[node name="AttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "fall_state", "jump_state")]
script = ExtResource("11_4bjw8")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
fall_state = NodePath("../FallState")
jump_state = NodePath("../JumpState")
animation_name = "Attack"

[node name="RangeAttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "fall_state", "jump_state", "aim_state")]
script = ExtResource("14_0xvrc")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
fall_state = NodePath("../FallState")
jump_state = NodePath("../JumpState")
aim_state = NodePath("../AimState")
animation_name = "Shoot"

[node name="AimState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "fall_state", "jump_state", "range_attack_state")]
script = ExtResource("15_bqqo1")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
fall_state = NodePath("../FallState")
jump_state = NodePath("../JumpState")
range_attack_state = NodePath("../RangeAttackState")
animation_name = "Aim"

[node name="JumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "walljump_state", "slide_state", "attack_state", "aim_state")]
script = ExtResource("12_va0vs")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
walljump_state = NodePath("../WallJumpState")
slide_state = NodePath("../SlideState")
attack_state = NodePath("../AttackState")
aim_state = NodePath("../AimState")
animation_name = "Jump"
move_speed = 100.0

[node name="WallJumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "slide_state")]
script = ExtResource("13_m8uta")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
slide_state = NodePath("../SlideState")
jump_force = Vector2(50, 250)
animation_name = "Jump"
move_speed = 100.0

[node name="FallState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "walljump_state", "slide_state", "attack_state", "aim_state")]
script = ExtResource("14_mur8y")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
walljump_state = NodePath("../WallJumpState")
slide_state = NodePath("../SlideState")
attack_state = NodePath("../AttackState")
aim_state = NodePath("../AimState")
animation_name = "Fall"
move_speed = 100.0

[node name="SlideState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "walljump_state")]
script = ExtResource("15_3vpdl")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
walljump_state = NodePath("../WallJumpState")
animation_name = "Slide"
move_speed = 100.0

[node name="PushbackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("16_50dke")
idle_state = NodePath("../IdleState")
fall_state = NodePath("../FallState")

[node name="PushbackTimer" type="Timer" parent="StateMachine/PushbackState"]
wait_time = 0.2

[node name="RollState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "jump_state", "fall_state")]
script = ExtResource("17_g83y0")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
jump_state = NodePath("../JumpState")
fall_state = NodePath("../FallState")
animation_name = "Roll"
move_speed = 100.0

[connection signal="player_was_hit" from="." to="CharacterBody2D/Sprite2D/AttackReceivedEffects" method="_on_player_player_was_hit"]
[connection signal="area_entered" from="CharacterBody2D/Sprite2D/SwordHitArea" to="AttackComponent" method="_on_sword_hit_area_area_entered"]
[connection signal="timeout" from="CharacterBody2D/Sprite2D/AttackReceivedEffects/InitialTimer" to="CharacterBody2D/Sprite2D/AttackReceivedEffects" method="_on_initial_timer_timeout"]
[connection signal="animation_finished" from="CharacterBody2D/AnimationPlayer" to="StateMachine/AttackState" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StateMachine/PushbackState/PushbackTimer" to="StateMachine/PushbackState" method="_on_pushback_timer_timeout"]
